// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serve web (/Users/dom/projects/redwood/redwood/packages/web-server/dist/bin.js) > errors out on unknown args 1`] = `
"rw-web-server

Start a server for serving only the web side

Options:
      --help                                Show help                  [boolean]
      --version                             Show version number        [boolean]
  -p, --port                                The port to listen on
                                                        [number] [default: 8910]
      --host                                The host to listen on. Defaults to
                                            '0.0.0.0' in production, '::' in
                                            development                 [string]
      --apiUrl, --api-url                   Relative URL for proxying requests
                                            from or a fully-qualified URL to the
                                            API server
                                       [string] [default: "/.redwood/functions"]
      --apiProxyTarget, --api-proxy-target  Forward requests from the apiUrl to
                                            this target. apiUrl must be a
                                            relative URL                [string]
      --apiHost, --api-host                 [Deprecated; use apiProxyTarget]
                                            Forward requests from the apiUrl to
                                            this target. apiUrl must be a
                                            relative URL   [deprecated] [string]

Examples:
  yarn rw-web-server --api-url=/api --api-  Start the web server and proxy
  proxy-target=https://api.redwood.horse    requests made to '/api' to
                                            'https://api.redwood.horse'
  yarn rw-web-server                        Start the web server send api
  --api-url=https://api.redwood.horse       requests to
                                            'https://api.redwood.horse' (make
                                            sure to configure CORS)

Unknown arguments: foo, bar, baz
"
`;

exports[`serve web (/Users/dom/projects/redwood/redwood/packages/web-server/dist/bin.js) > has help configured 1`] = `
"rw-web-server

Start a server for serving only the web side

Options:
      --help                                Show help                  [boolean]
      --version                             Show version number        [boolean]
  -p, --port                                The port to listen on
                                                        [number] [default: 8910]
      --host                                The host to listen on. Defaults to
                                            '0.0.0.0' in production, '::' in
                                            development                 [string]
      --apiUrl, --api-url                   Relative URL for proxying requests
                                            from or a fully-qualified URL to the
                                            API server
                                       [string] [default: "/.redwood/functions"]
      --apiProxyTarget, --api-proxy-target  Forward requests from the apiUrl to
                                            this target. apiUrl must be a
                                            relative URL                [string]
      --apiHost, --api-host                 [Deprecated; use apiProxyTarget]
                                            Forward requests from the apiUrl to
                                            this target. apiUrl must be a
                                            relative URL   [deprecated] [string]

Examples:
  yarn rw-web-server --api-url=/api --api-  Start the web server and proxy
  proxy-target=https://api.redwood.horse    requests made to '/api' to
                                            'https://api.redwood.horse'
  yarn rw-web-server                        Start the web server send api
  --api-url=https://api.redwood.horse       requests to
                                            'https://api.redwood.horse' (make
                                            sure to configure CORS)
"
`;

exports[`serve web (/Users/dom/projects/redwood/redwood/packages/web-server/dist/bin.js) > works by default; registers a warning at apiUrl 1`] = `
{
  "data": null,
  "errors": [
    {
      "extensions": {
        "code": "BAD_GATEWAY",
        "httpStatus": 502,
      },
      "message": "Bad Gateway: you may have misconfigured apiUrl and apiProxyTarget. If apiUrl is a relative URL, you must provide apiProxyTarget.",
    },
  ],
}
`;

exports[`serve web ([ '/Users/dom/projects/redwood/redwood/packages/api-server/dist/index.js', 'web' ]) > errors out on unknown args 1`] = `
"rw-server web

Start a server for serving only the web side

Options:
      --help                                Show help                  [boolean]
      --version                             Show version number        [boolean]
  -p, --port                                The port to listen on
                                                        [number] [default: 8910]
      --host                                The host to listen on. Defaults to
                                            '0.0.0.0' in production, '::' in
                                            development                 [string]
      --apiUrl, --api-url                   Relative URL for proxying requests
                                            from or a fully-qualified URL to the
                                            API server
                                       [string] [default: "/.redwood/functions"]
      --apiProxyTarget, --api-proxy-target  Forward requests from the apiUrl to
                                            this target. apiUrl must be a
                                            relative URL                [string]
      --apiHost, --api-host                 [Deprecated; use apiProxyTarget]
                                            Forward requests from the apiUrl to
                                            this target. apiUrl must be a
                                            relative URL   [deprecated] [string]

Unknown arguments: foo, bar, baz
"
`;

exports[`serve web ([ '/Users/dom/projects/redwood/redwood/packages/api-server/dist/index.js', 'web' ]) > has help configured 1`] = `
"rw-server web

Start a server for serving only the web side

Options:
      --help                                Show help                  [boolean]
      --version                             Show version number        [boolean]
  -p, --port                                The port to listen on
                                                        [number] [default: 8910]
      --host                                The host to listen on. Defaults to
                                            '0.0.0.0' in production, '::' in
                                            development                 [string]
      --apiUrl, --api-url                   Relative URL for proxying requests
                                            from or a fully-qualified URL to the
                                            API server
                                       [string] [default: "/.redwood/functions"]
      --apiProxyTarget, --api-proxy-target  Forward requests from the apiUrl to
                                            this target. apiUrl must be a
                                            relative URL                [string]
      --apiHost, --api-host                 [Deprecated; use apiProxyTarget]
                                            Forward requests from the apiUrl to
                                            this target. apiUrl must be a
                                            relative URL   [deprecated] [string]
"
`;

exports[`serve web ([ '/Users/dom/projects/redwood/redwood/packages/api-server/dist/index.js', 'web' ]) > works by default; registers a warning at apiUrl 1`] = `
{
  "data": null,
  "errors": [
    {
      "extensions": {
        "code": "BAD_GATEWAY",
        "httpStatus": 502,
      },
      "message": "Bad Gateway: you may have misconfigured apiUrl and apiProxyTarget. If apiUrl is a relative URL, you must provide apiProxyTarget.",
    },
  ],
}
`;

exports[`serve web ([ '/Users/dom/projects/redwood/redwood/packages/cli/dist/index.js', 'serve', 'web' ]) > errors out on unknown args 1`] = `
"rw serve web

Start a server for serving only the web side

Options:
      --help                                Show help                  [boolean]
      --version                             Show version number        [boolean]
      --cwd                                 Working directory to use (where
                                            \`redwood.toml\` is located)
      --telemetry                           Whether to send anonymous usage
                                            telemetry to RedwoodJS     [boolean]
  -p, --port                                The port to listen on
                                                        [number] [default: 8910]
      --host                                The host to listen on. Defaults to
                                            '0.0.0.0' in production, '::' in
                                            development                 [string]
      --apiUrl, --api-url                   Relative URL for proxying requests
                                            from or a fully-qualified URL to the
                                            API server
                                       [string] [default: "/.redwood/functions"]
      --apiProxyTarget, --api-proxy-target  Forward requests from the apiUrl to
                                            this target. apiUrl must be a
                                            relative URL                [string]
      --apiHost, --api-host                 [Deprecated; use apiProxyTarget]
                                            Forward requests from the apiUrl to
                                            this target. apiUrl must be a
                                            relative URL   [deprecated] [string]

Unknown arguments: foo, bar, baz
"
`;

exports[`serve web ([ '/Users/dom/projects/redwood/redwood/packages/cli/dist/index.js', 'serve', 'web' ]) > has help configured 1`] = `
"rw serve web

Start a server for serving only the web side

Options:
      --help                                Show help                  [boolean]
      --version                             Show version number        [boolean]
      --cwd                                 Working directory to use (where
                                            \`redwood.toml\` is located)
      --telemetry                           Whether to send anonymous usage
                                            telemetry to RedwoodJS     [boolean]
  -p, --port                                The port to listen on
                                                        [number] [default: 8910]
      --host                                The host to listen on. Defaults to
                                            '0.0.0.0' in production, '::' in
                                            development                 [string]
      --apiUrl, --api-url                   Relative URL for proxying requests
                                            from or a fully-qualified URL to the
                                            API server
                                       [string] [default: "/.redwood/functions"]
      --apiProxyTarget, --api-proxy-target  Forward requests from the apiUrl to
                                            this target. apiUrl must be a
                                            relative URL                [string]
      --apiHost, --api-host                 [Deprecated; use apiProxyTarget]
                                            Forward requests from the apiUrl to
                                            this target. apiUrl must be a
                                            relative URL   [deprecated] [string]
"
`;

exports[`serve web ([ '/Users/dom/projects/redwood/redwood/packages/cli/dist/index.js', 'serve', 'web' ]) > works by default; registers a warning at apiUrl 1`] = `
{
  "data": null,
  "errors": [
    {
      "extensions": {
        "code": "BAD_GATEWAY",
        "httpStatus": 502,
      },
      "message": "Bad Gateway: you may have misconfigured apiUrl and apiProxyTarget. If apiUrl is a relative URL, you must provide apiProxyTarget.",
    },
  ],
}
`;
